[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "deep-translator>=1.11.4",
    "feedparser>=6.0.12",
    "flask>=3.1.2",
    "pytelegrambotapi>=4.29.1",
    "requests>=2.32.5",
    "schedule>=1.2.2",
]
